--- a/css/style.css
+++ b/css/style.css
@@ -87,14 +87,14 @@ body {
   background-size: contain;
 }
 .meeple.ghost { opacity: 0.2; }
-.meeple.player1 { background: url(images/red_meeple.png); }
-.meeple.player2 { background: url(images/green_meeple.png); }
-.meeple.player3 { background: url(images/yellow_meeple.png); }
-.meeple.player4 { background: url(images/blue_meeple.png); }
-.meeple.player1.shadow { background: url(images/red_green_meeple_shadow.png); }
-.meeple.player2.shadow { background: url(images/red_green_meeple_shadow.png); }
-.meeple.player3.shadow { background: url(images/yellow_blue_meeple_shadow.png); }
-.meeple.player4.shadow { background: url(images/yellow_blue_meeple_shadow.png); }
+.meeple.player1 { background: url(images/red_meeple.png) no-repeat; }
+.meeple.player2 { background: url(images/green_meeple.png) no-repeat; }
+.meeple.player3 { background: url(images/yellow_meeple.png) no-repeat; }
+.meeple.player4 { background: url(images/blue_meeple.png) no-repeat; }
+.meeple.player1.shadow { background: url(images/red_green_meeple_shadow.png) no-repeat; }
+.meeple.player2.shadow { background: url(images/red_green_meeple_shadow.png) no-repeat; }
+.meeple.player3.shadow { background: url(images/yellow_blue_meeple_shadow.png) no-repeat; }
+.meeple.player4.shadow { background: url(images/yellow_blue_meeple_shadow.png) no-repeat; }
 .workspace .meeple { position: absolute; }
 .toolhut :nth-child(1) { left: 10px; top: -10px; }
 .field :nth-child(1) { left: 15px; top: -7px; }
@@ -205,10 +205,13 @@ body {
   display: inline-block;
   margin-left: 3px;
 }
-.counter.score {
+.score {
   min-width: 30px;
   background-position: bottom center;
   background-image: url(images/score.png);
+  background-repeat: no-repeat;
+}
+.counter.score {
   padding: 0;
   text-align: center;
 }
@@ -259,7 +262,7 @@ body {
   margin: auto;
 }
 
-.dialog .meeple {
+.placement.dialog .meeple {
   width: 48px;
   height: 70px;
   display: inline-block;
@@ -327,6 +330,11 @@ body {
 .feed .resource.brick { background: url(images/clay.png) no-repeat; }
 .feed .resource.stone { background: url(images/stone.png) no-repeat; }
 .feed .resource.gold { background: url(images/gold.png) no-repeat; }
+
+.gameover li {
+  line-height: 35px;
+  padding-left: 35px;
+}
 
 /* Buildings */
 .building {
