--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,12 @@ body {
   padding-left: 35px;
 }
 
+.dialog.purchase.medium > div {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 10px 15px;
+}
+
 /* Buildings */
 .building {
   box-shadow: 0px 1px 0px #333;
