Add images for "at most" cost buildings

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -359,6 +359,9 @@ body {
 .building4 { background: url(images/hut_04.png); }
 .building6 { background: url(images/hut_06.png); }
 .building8 { background: url(images/hut_08.png); }
+.building9 { background: url(images/hut_09.png); }
+.building10 { background: url(images/hut_10.png); }
+.building11 { background: url(images/hut_11.png); }
 .building12 { background: url(images/hut_12.png); }
 .building13 { background: url(images/hut_13.png); }
 .building14 { background: url(images/hut_14.png); }
