Add backgrounds for remaining variable cost buildings

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -356,8 +356,12 @@ body {
 .building-pile4 { left: 395px; }
 .building-back { background: url(images/hut_back.png); }
 .building1 { background: url(images/hut_01.png); }
+.building2 { background: url(images/hut_02.png); }
+.building3 { background: url(images/hut_03.png); }
 .building4 { background: url(images/hut_04.png); }
+.building5 { background: url(images/hut_05.png); }
 .building6 { background: url(images/hut_06.png); }
+.building7 { background: url(images/hut_07.png); }
 .building8 { background: url(images/hut_08.png); }
 .building9 { background: url(images/hut_09.png); }
 .building10 { background: url(images/hut_10.png); }
@@ -367,11 +371,15 @@ body {
 .building14 { background: url(images/hut_14.png); }
 .building15 { background: url(images/hut_15.png); }
 .building16 { background: url(images/hut_16.png); }
+.building17 { background: url(images/hut_17.png); }
 .building18 { background: url(images/hut_18.png); }
+.building19 { background: url(images/hut_19.png); }
 .building20 { background: url(images/hut_20.png); }
 .building21 { background: url(images/hut_21.png); }
+.building22 { background: url(images/hut_22.png); }
 .building23 { background: url(images/hut_23.png); }
 .building24 { background: url(images/hut_24.png); }
+.building25 { background: url(images/hut_25.png); }
 .building26 { background: url(images/hut_26.png); }
 .building27 { background: url(images/hut_27.png); }
 .building28 { background: url(images/hut_28.png); }
